# streamlit-pandas-mcp-client

./: .env.template  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
components/: __init__.py  chart_display.py  chat.py  chat_interface.py  connection_status.py  file_manager.py  mcp_client.py  sidebar.py
config/: __init__.py  prompt_manager.py  settings.py
config/prompts/: custom.txt  default.txt
core/: __init__.py  mcp_client.py  openai_handler.py  session.py
pages/: 0_🏠_Home.py  1_chat_agent.py  1_📁_Files.py  2_data_analysis.py  2_📊_Charts.py  3_file_manager.py  4_logger.py
static/: style.css
utils/: __init__.py  async_helpers.py  chart_handler.py  logger.py  security.py  session_state.py  temp_storage.py
